--- a/src/pages/portfolios/test.mdx
+++ b/src/pages/portfolios/test.mdx
@@ -1,12 +1,7 @@
 ---
 layout: "../../layouts/MDXLayout.astro"
-title: test
-author: PepperSauce
+title: "UE特效次元斬"
 pubDate: 2025-01-05
-description: For test
-tags: ["Unreal Engine", "C++", "Game Development"]
+description: "這是參考一拳超人原子武士所製作的特效-次元斬，做的很累。"
+tags: ["Unreal Engine", "Game Development", "VFX", "Imitation"]
 ---
-
-export const title = 'My first MDX post'
-
-# {title}
