--- a/src/pages/blogs/whoami.mdx
+++ b/src/pages/blogs/whoami.mdx
@@ -1,11 +1,120 @@
 ---
 title: "我是誰，我從哪裡來，我要到哪裡去？"
 description: "這是一篇關於PepperSauce的部落格文章"
-date: 2025-05-13
-tags: ["生活"]
+pubDate: 2025-05-17
+tags: ["生活", "思考"]
 author: "PepperSauce"
 image: ""
-layout: "../../layouts/DefaultWebsite.astro"
+layout: "../../layouts/DefaultMDX.astro"
 ---
 
-嗨嗨 大家好
+# 我是誰，我從哪裡來，我要到哪裡去？
+
+哈囉你好，我是PepperSauce，這是一篇關於我的文章。
+在這裡你可以看到我的自我介紹，包含：興趣、技能、經歷、未來計畫等。
+
+## 興趣1
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+
+## 技能
+程式語言：Python、JavaScript、C++、C#
+網頁前端：Astro、Tailwind CSS
+
+## 經歷
+高雄市立高雄高級工業職業學校-資訊科
+雲林科技大學-資訊工程學系
+
+## 未來計畫
+未完待續。
+
+> 誰是bobo?
+
+## 其他
+我的部落格會分享一些我學習的東西，還有我的思考，或對這世界的質問。
+如果你也喜歡思想上的碰撞，歡迎來看看，讓我們一起理性且建設性的討論。
+## 興趣2
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣3
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+### 興趣4
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣5
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+### 興趣6
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣7
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣8
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣9
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+### 興趣10
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣11
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣12
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣13
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣14
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣15
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣16
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣17
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣18
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣19
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣20
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣21
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
+## 興趣22
+我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
+我有時間想學習的興趣：哲學、心理學、街舞(Locking)、遊戲特效、影片剪輯、架設Minecraft伺服器等。
+我現在在學習的興趣：~~未完待續。~~
