--- a/src/pages/blogs/whoami.mdx
+++ b/src/pages/blogs/whoami.mdx
@@ -11,7 +11,7 @@ layout: "../../layouts/DefaultMDX.astro"
 # 我是誰，我從哪裡來，我要到哪裡去？
 
 哈囉你好，我是PepperSauce，這是一篇關於我的文章。
-在這裡你可以看到我的自我介紹，包含：興趣、技能、經歷、未來計畫等。
+在這裡你可以看到我的自我介紹，包含：興趣、技能、未來計畫等。
 
 ## 興趣
 我是一位興趣多樣的人，喜歡很多不同領域的東西，但樣樣不精通。
@@ -21,10 +21,6 @@ layout: "../../layouts/DefaultMDX.astro"
 ## 技能
 程式語言：Python、JavaScript、C++、C#
 網頁前端：Astro、Tailwind CSS
-
-## 經歷
-高雄市立高雄高級工業職業學校-資訊科
-雲林科技大學-資訊工程學系
 
 ## 未來計畫
 未完待續。
